# GameEngine

./: CMakeLists.txt  README.md  main.cpp
include/: Maths.hpp
include/graphics/: Batch2dRenderer.hpp  Font.hpp  FontManager.hpp  Label.hpp  Renderable2d.hpp  Renderer2d.hpp  Shader.hpp  SimpleRenderer2d.hpp  Sprite.hpp  StaticSprite.hpp  Texture.hpp  VertexData.hpp  Window.hpp
include/graphics/buffers/: Buffer.hpp  IndexBuffer.hpp  VertexArray.hpp
include/graphics/layers/: Group.hpp  Layer.hpp  Tilelayer.hpp
include/maths/: Vec2.hpp  Vec3.hpp  Vec4.hpp
include/utils/: FileUtils.hpp  ImageLoad.hpp  Times.hpp
src/graphics/: Batch2dRenderer.cpp  Font.cpp  FontManager.cpp  Label.cpp  Renderable2d.cpp  Renderer2d.cpp  Shader.cpp  SimpleRenderer2d.cpp  Sprite.cpp  StaticSprite.cpp  Texture.cpp  Window.cpp  Window.hpp
src/graphics/buffers/: Buffer.cpp  IndexBuffer.cpp  VertexArray.cpp
src/graphics/layers/: Group.cpp  Layer.cpp  TileLayer.cpp
src/maths/: Vec2.cpp  Vec3.cpp  Vec4.cpp
src/shader/: basicFrag.glsl  basicVert.glsl
src/utils/: FileUtils.cpp  ImageLoad.cpp  Times.cpp
